# SeqIg

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  properties.txt  something.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml  src.1426379060887.pdom  src.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/src/: .markers
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.kinexa203_0/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
lib/: libboost_filesystem.dylib  libboost_system.dylib
seqig_data/Ig/: Properties.tsv
src/: .cproject  AlignAntibody.cpp  AlignAntibody.h  AntibodyJunction.cpp  AntibodyJunction.h  DatabaseHandler.cpp  DatabaseHandler.h  OutputHandler.cpp  OutputHandler.h  PropertiesHandler.cpp  PropertiesHandler.h  SeqIg.cpp  SeqIg.h  StructDefs.h  Utility.h
testing/: 1K_Seqs.fasta  CAP245-vrc26.10.fasta  PG9_Test_CDR1.fasta  PG9_Test_CDR2.fasta  PG9_Test_FW2.fasta  PG9_Test_FW3.fasta  PGV04.fasta  VRC01_heavy.fasta  edge_case.fasta
(+4 files in other folders)
